# bobbinbear

./: .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .neoconf.json  .prettierrc.mjs  Cargo.toml  README.md  flake.nix  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/bobbinbear_core/: .neoconf.json  Cargo.toml  clippy.toml  package.json
apps/bobbinbear_core/assets/shaders/: selection_bounds_material.wgsl
apps/bobbinbear_core/src/: constants.rs  editor.rs  lib.rs  main.rs  prelude.rs  shared.rs  types.rs
apps/bobbinbear_core/src/api/: mod.rs  msg_polling.rs  wasm.rs
apps/bobbinbear_core/src/components/: bbid.rs  bbpathevent.rs  mod.rs  scene.rs  utility.rs
apps/bobbinbear_core/src/components/bbpath/: bbpath.rs  bbpathevent.rs  iter.rs  mod.rs
apps/bobbinbear_core/src/events/: camera.rs
apps/bobbinbear_core/src/msgs/: api.rs  keybinds.rs  mod.rs
apps/bobbinbear_core/src/msgs/api/: mod.rs  serialised.rs
apps/bobbinbear_core/src/msgs/cmds/: add_remove_edge_cmd.rs  add_remove_object_cmd.rs  inspect_cmd.rs  mod.rs  move_objects_cmd.rs  multi_cmd.rs  select_objects_cmd.rs  update_path_cmd.rs  update_vector_graph_cmd.rs
apps/bobbinbear_core/src/msgs/effect/: mod.rs
apps/bobbinbear_core/src/msgs/tools/: box_tool.rs  grab_tool.rs  mod.rs  noop_tool.rs  pen_tool.rs  select_tool.rs
apps/bobbinbear_core/src/plugins/: cursor_test_plugin.rs  mod.rs
apps/bobbinbear_core/src/plugins/bounds_2d_plugin/: mod.rs
apps/bobbinbear_core/src/plugins/input_plugin/: mod.rs  types.rs
apps/bobbinbear_core/src/plugins/inspect_plugin/: mod.rs
apps/bobbinbear_core/src/plugins/screen_space_root_plugin/: mod.rs  world_to_screen.rs
apps/bobbinbear_core/src/plugins/selection_plugin/: mod.rs  raycast.rs  selection_bounds.rs  selection_bounds_material.rs  utils.rs
apps/bobbinbear_core/src/plugins/vector_graph_plugin/: mod.rs  systems.rs  types.rs
apps/bobbinbear_core/src/serialisation/: mod.rs  serialised_component.rs
apps/bobbinbear_core/src/systems/: camera.rs
apps/bobbinbear_core/src/utils/: coordinates.rs  debug.rs  mesh.rs  mod.rs  path.rs  vector.rs  vector_graph.rs  world.rs
apps/bobbinbear_core/src/utils/reflect_shims/: mod.rs  reflectable_path.rs
apps/editor/renderer/: .gitignore  Cargo.toml
apps/editor/renderer/src/: constants.rs  editor.rs  lib.rs  main.rs  resources.rs  types.rs
apps/editor/renderer/src/api/: mod.rs
apps/editor/renderer/src/components/: bbid.rs  scene.rs
apps/editor/renderer/src/editor2/: camera.rs  constants.rs  frontend.rs  input.rs  mod.rs
apps/editor/renderer/src/msgs/: mod.rs  (+2 more)
bb_core/: Cargo.toml  bacon.toml  package.json
bb_core/assets/shaders/: selection_bounds_material.wgsl
bb_core/src/: lib.rs
bb_core/src/api/: debug.rs  mod.rs  scene.rs  undoredo.rs  viewport.rs
bb_core/src/bb_changeset/: mod.rs
bb_core/src/changeset/: mod.rs  primitives.rs  resource.rs
bb_core/src/ecs/: core.rs  mod.rs  node.rs  object.rs  position.rs  proxy.rs  synced_position.rs  vectorgraphic.rs
bb_core/src/index/: mod.rs
bb_core/src/inspecting/: components.rs  mod.rs
bb_core/src/ipc/: mod.rs  sync.rs
bb_core/src/materials/: mod.rs  ui_el_material.rs
bb_core/src/meshes/: handles.rs  mod.rs
bb_core/src/plugins/: mod.rs
bb_core/src/plugins/bounds2d/: mod.rs
bb_core/src/plugins/effect/: js_event_que.rs  mod.rs
bb_core/src/plugins/inspecting/: components.rs  mod.rs  vector_object.rs
bb_core/src/plugins/model_view/: mod.rs
bb_core/src/plugins/selected/: api.rs  material.rs  mod.rs  raycast.rs  systems.rs
bb_core/src/plugins/undoredo/: api.rs  changeset_ext.rs  mod.rs
bb_core/src/plugins/viewport/: debug.rs  mod.rs  systems.rs
bb_core/src/selected/: api.rs
bb_core/src/serialise/: components.rs  materials.rs  mod.rs
bb_core/src/serialise/components/: mod.rs
bb_core/src/tools/: api.rs  mod.rs  resource.rs  types.rs
bb_core/src/tools/input/: mod.rs  types.rs
bb_core/src/tools/pen/: actions.rs  mod.rs  resource.rs  utils.rs
bb_core/src/tools/select/: mod.rs
bb_core/src/undoredo/: api.rs  mod.rs
bb_core/src/utils/: curve.rs  mesh.rs  mod.rs  safe_world_ext.rs  schedule_graph.rs
bb_core/src/views/: mod.rs  vector_edge.rs  vector_endpoint.rs
bb_desktop/: Cargo.toml
bb_desktop/src/: main.rs
crates/bevy_changeset/: Cargo.toml
crates/bevy_changeset/src/: error.rs  lib.rs  resource.rs  uid.rs
crates/bevy_changeset/src/changes/: heirarchy.rs  insert.rs  mod.rs  spawn.rs
crates/bevy_changeset/src/fragments/: mod.rs
crates/bevy_changeset/tests/: atomic.rs  basic.rs
crates/bevy_spts_changeset/: Cargo.toml  README.md
crates/bevy_spts_changeset/src/: builder.rs  commands_ext.rs  error.rs  events.rs  lib.rs  resource.rs
crates/bevy_spts_changeset/src/changes/: heirarchy.rs  insert.rs  mod.rs  spawn.rs
crates/bevy_spts_changeset/tests/: basic.rs  builder_insert.rs  builder_spawn.rs
crates/bevy_spts_fragments/: Cargo.toml  README.md
crates/bevy_spts_fragments/src/: lib.rs  uid.rs
crates/bevy_spts_fragments/src/bundle/: errors.rs  mod.rs
crates/bevy_spts_fragments/src/component/: errors.rs  mod.rs
crates/bevy_spts_fragments/src/entity/: errors.rs  mod.rs
crates/bevy_spts_fragments/src/fragment/: bundle.rs  component.rs  entity.rs  hierarchy.rs  mod.rs
crates/bevy_spts_fragments/src/hierarchy/: errors.rs  mod.rs
crates/bevy_spts_fragments/tests/: component.rs
crates/bevy_spts_uid/: Cargo.toml
crates/bevy_spts_uid/src/: extension.rs  lib.rs
crates/bevy_spts_vectorgraphic/: Cargo.toml  README.md
crates/bevy_spts_vectorgraphic/examples/: basic.rs  basic_closed.rs  basic_open.rs  softbody.rs
crates/bevy_spts_vectorgraphic/src/: changeset.rs  commands_ext.rs  components.rs  lib.rs  lifecycle.rs  lyon_components.rs  material.rs  systems.rs  utils.rs
crates/bevy_spts_vectorgraphic/src/shaders/: vector_graphic_material.wgsl
crates/bevy_spts_vectorgraphic/tests/: change_detection.rs  integration.rs
crates/spts_fragments/: Cargo.toml
crates/spts_fragments/src/: lib.rs  uid.rs
crates/spts_fragments/src/fragment/: component.rs  entity.rs  hierarchy.rs  mod.rs
(+283 files in other folders)
