[workspace]
resolver = "2"

members = [
    "apps/bobbinbear_core",
    "packages/bb_vector_network",
    "packages/bb_vector_network/examples/editor",
    "packages/bb_vector_network/examples/visualisations",
]

# Fix for RA breaking incremental compilation.
[profile.rust-analyzer]
inherits = "dev"
