[package]
name = "bb_core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y"]

[lib]
name = "bb_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false }
serde = {version = "1.0.196", features = ["serde_derive"] }

# App Crates
bevy-wasm-api = { git = "https://github.com/sanspointes/bevy-wasm-api/", version = "0.2.0" }
bevy_spts_uid = { version = "0.1.0", path = "../crates/bevy_spts_uid", features = ["serde", "tsify"] }
bevy_spts_changeset = { version = "0.1.0", path = "../crates/bevy_spts_changeset", features = ["serde"] }
bevy_spts_fragments = { version = "0.1.0", path = "../crates/bevy_spts_fragments", features = ["serde"] }
bevy_spts_vectorgraphic = { version = "0.1.0", path = "../crates/bevy_spts_vectorgraphic", features = ["reflect", "changeset"] }
uuid = { version = "1.7.0", features = ["serde"] }

# Wasm
console_error_panic_hook = "0.1.7"
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
serde-wasm-bindgen = "0.6.3"
wasm-bindgen-futures = "0.4.41"
anyhow = "1.0.79"
tsify = {version = "0.4.5", default-features = false, features = ["js", "wasm-bindgen"]}
bevy-inspector-egui = "0.24.0"
bevy_mod_raycast = "0.17.0"
moonshine-core = "0.1.1"

[features] 
default = ["minimal_bevy"]
minimal_bevy = ["bevy/bevy_render", "bevy/bevy_scene", "bevy/bevy_sprite", "bevy/bevy_winit", "bevy/serialize", "bevy/webgl2", "bevy/bevy_ui"]

[profile.release]
debug = true
lto = true
opt-level = 's'

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]
