# You must change these to your own details.
[package]
name = "bobbinbear_core"
version = "0.1.0"
authors = ["Connor Meehan <connorgm@pm.me>"]
edition = "2021"
resolver = "2"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[lib]
name = "bobbinbear_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bobbinbear_core"
path = "src/main.rs"

[features]
default = ["bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/serialize", "bevy/webgl2"]
desktop = ["bevy/dynamic_linking", "bevy/x11"]

inspector = ["bevy-inspector-egui"]

trace_bevy = []
# Useful for tracing the system order of execution with tracy
# NOTE: This does not debug the bevy systems.  Just our app.
debug_trace = ["bevy/trace", "bevy/trace_tracy", "bevy_prototype_lyon/trace"]
# Debug select tool / selection systems
debug_select = []
# Debug reflection/serialisation/deserialisation
debug_reflect = []
# Debug global bounds plugin
debug_bounds = []
# Debug commands
debug_cmd = []

[dependencies]
## Wasm Bindgen related 
wasm-bindgen = "0.2.85"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [ "console" ] }
console_error_panic_hook = "0.1.7"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
bevy = { version = "0.11.3", default-features = false }
bevy_prototype_lyon = { path = "../../packages/bevy_prototype_lyon", features = [ "bevy_reflect" ] }
wasm-bindgen-futures = "0.4.37"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
bevy_mod_raycast = "0.14.1"
bevy-inspector-egui = { version = "0.19.0", optional = true }
# Serialisation
serde_json = "1.0.107"
serde = "1.0.188"
# Error handling
thiserror = "1.0.49"
anyhow = "1.0.75"
futures = "0.3.28"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
