[package]
name = "bevy_spts_changeset"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
bevy_app = "0.14"
bevy_ecs = "0.14"
bevy_hierarchy = "0.14"
bevy_reflect = "0.14"
bevy_scene = "0.14"
serde = { version = "1.0.196", features = ["derive"], optional = true }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

bevy_spts_fragments = { version = "0.1.0", path = "../bevy_spts_fragments" }
bevy_spts_uid = { version = "0.1.0", path = "../bevy_spts_uid" }
thiserror = "1.0.59"
as-any = "0.3.1"
bevy_utils = "0.13.2"

[features]
serde = ["dep:serde"]
