[package]
name = "bevy_spts_fragments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_app = "0.14"
bevy_ecs = "0.14"
bevy_hierarchy = "0.14"
bevy_reflect = "0.14"
bevy_scene = "0.14"
bevy_utils = "0.14"
serde = { version = "1.0.197", features = ["derive"], optional = true }
smallvec = "1.13.1"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["serde"] }
bevy_spts_uid = { version = "0.1.0", path = "../bevy_spts_uid" }

[features]
serde = ["dep:serde"]
