[package]
name = "bevy_spts_vector_graphic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
reflect = []

[dependencies]
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_sprite",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_asset",
]}
lyon_path = "1.0.4"
lyon_tessellation = "1.0.13"
smallvec = "1.13.1"

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "x11",
    "bevy_asset",
] }
bevy-inspector-egui = "0.23.3"
bevy_xpbd_2d = "0.4.2"
