# You must change these to your own details.
[package]
name = "renderer"
version = "0.1.0"
authors = ["Connor Meehan <connorgm@pm.me>"]
edition = "2021"
resolver = "2"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[lib]
name = "bobbinbear_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bobbinbear_core"
path = "src/main.rs"

[features]
dev = ["bevy/bevy_dylib"]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
# Desktop
# default = ["bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/png", "tracing/release_max_level_warn", "tracing/max_level_trace"]
# Wasm
default = ["bevy/dynamic_linking", "bevy/x11", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_render", "console_error_panic_hook"]

linux = []

[dependencies]
wasm-bindgen = "0.2.85"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bevy = { version = "0.11.3", default-features = false }
bevy_prototype_lyon = { path = "../../../packages/bevy_prototype_lyon", features = [ "bevy_reflect" ] }
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
bevy_mod_raycast = "0.14.1"
bevy-inspector-egui = "0.19.0"
serde_json = "1.0.107"
serde = "1.0.188"
web-sys = { version = "0.3.64", features = [ "console" ] }
thiserror = "1.0.49"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
