# You must change these to your own details.
[package]
name = "renderer"
version = "0.1.0"
authors = ["Connor Meehan <connorgm@pm.me>"]
edition = "2021"
resolver = "2"

[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[lib]
name = "bobbinbear_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bobbinbear_core"
path = "src/main.rs"

[features]
# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
# Desktop
# default = ["bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_pbr", "bevy/bevy_render", "bevy/bevy_sprite", "bevy/png", "tracing/release_max_level_warn", "tracing/max_level_trace"]
# Wasm
default = ["bevy/dynamic_linking", "bevy/x11", "bevy/bevy_scene", "bevy/bevy_winit", "bevy/bevy_core_pipeline", "bevy/bevy_render", "bevy/serialize", "console_error_panic_hook"]

inspector = ["bevy-inspector-egui"]

trace_bevy = []
# Useful for tracing the system order of execution with tracy
# NOTE: This does not debug the bevy systems.  Just our app.
debug_trace = ["bevy/trace", "bevy/trace_tracy", "bevy_prototype_lyon/trace"]
# Debug select tool / selection systems
debug_select = []
# Debug reflection/serialisation/deserialisation
debug_reflect = []
# Debug global bounds plugin
debug_bounds = []
# Debug commands
debug_cmd = []

[dependencies]
wasm-bindgen = "0.2.85"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
bevy = { version = "0.11.3", default-features = false }
bevy_prototype_lyon = { path = "../../../packages/bevy_prototype_lyon", features = [ "bevy_reflect" ] }
js-sys = "0.3.64"
wasm-bindgen-futures = "0.4.37"
crossbeam-channel = "0.5.8"
lazy_static = "1.4.0"
bevy_mod_raycast = "0.14.1"
bevy-inspector-egui = { version = "0.19.0", optional = true }
serde_json = "1.0.107"
serde = "1.0.188"
web-sys = { version = "0.3.64", features = [ "console" ] }
thiserror = "1.0.49"
anyhow = "1.0.75"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
